# MCP-HR

./: .gitignore  readme.md
backend/: README.md  api_server.py  hr_agent.py  ingest.py  ingest_employees.py  main.py  mcp_hr_server.py  project_setup_check.py  pyproject.toml  requirements.txt  run_app.py  streamlit_app.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/analytics/: page.jsx
frontend/app/audit/: page.jsx
frontend/app/chat/: page.jsx
frontend/app/directory/: page.jsx
frontend/app/help/: page.jsx
frontend/components/: Sidebar.jsx  ThemeProvider.jsx  ThemeToggle.jsx
frontend/lib/: hr-api.ts
