[project]
name = "mcp-hr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.135.2",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "pypdf>=4.0.0",
    "streamlit>=1.35.0",
    "uvicorn>=0.41.0",
]
